added endpoint to create a quote
